2009-01-07  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 566744 – _wrap_g_input_stream_read_async() argument parsing
	has incorrect keyword args

	* gio/ginputstream.override (_wrap_g_input_stream_read_async): Fix
	keyword list to be in sync with positional arguments.

2009-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 566737 – Bad -I ordering can break build

	* Makefile.am:
	* gobject/Makefile.am:
	* gio/Makefile.am:
	* tests/Makefile.am:
	Commit a patch from [dmacks at netspace dot org]

2009-01-04  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 564018 – pygobject libtool-2.2 patch

	* configure.ac: Apply the patch provided by Cygwin Ports
	maintainer.

2009-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: Post release version bump to 2.16.1

=== 2.16.0 ===
2009-01-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: updated.

	* README: updated.

2009-01-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: Version bump to 2.16.0

2008-12-24  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547119 – gobject.timeout_add_seconds() not found in docs

	* docs/reference/pyglib-functions.xml (glib.timeout_add_seconds):
	Describe.

2008-12-21  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 564102 – _wrap_g_output_stream_write_async not adding a
	reference to the buffer passed

	* gio/gio.override (pygio_notify_copy_buffer): New function.
	(pygio_free_notify): Free new `buffer' field if it is set.

	* gio/goutputstream.override (_wrap_g_output_stream_write_async):
	Copy the buffer with new pygio_notify_copy_buffer() and use the
	copy for g_output_stream_write_async() call.

	* gio/gfile.override (_wrap_g_file_replace_contents_async): Same
	as for _wrap_g_output_stream_write_async().

2008-12-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 555613 – gio.VolumeMonitor segfaults

	* gio/gvolumemonitor.override (_wrap_g_volume_monitor_tp_new):
	Unconditionally raise TypeError.

2008-12-03  Paul Pogonyshev  <pogonyshev@gmx.net>
